--- a/interpreter/build.gradle
+++ b/interpreter/build.gradle
@@ -11,6 +11,9 @@ repositories {
 
 dependencies {
     implementation project(":ast")
+    testImplementation project(":lexer")
+    testImplementation project(":parser")
+    testImplementation project(":token")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
