--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish to GitHub Packages
 on:
   push:
     branches:
-      - main  # Puedes cambiar a la rama donde deseas que se publique automáticamente
+      - main
 
 jobs:
   publish:
@@ -16,11 +16,11 @@ jobs:
       - name: Set up JDK 19
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # Usa Temurin JDK
+          distribution: 'temurin'
           java-version: '19'
 
       - name: Build and publish package
         run: ./gradlew publish
         env:
-          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_ACTOR: ${{ secrets.NAME }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
