--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'org.example'
@@ -19,4 +20,26 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ignamendez01/PrintScript---Ignacio-Mendez")
+            credentials {
+                username = System.getenv("NAME")
+                password = System.getenv("TOKEN")
+            }
+        }
+    }
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            groupId = 'printscript'
+            artifactId = 'parser'
+            version = '1.1.1'
+        }
+    }
 }
