--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,19 +6,6 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: '11'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build and publish
-        run: ./gradlew publish
-
   publish:
     runs-on: ubuntu-latest
 
@@ -35,5 +22,5 @@ jobs:
       - name: Build and publish package
         run: ./gradlew publish
         env:
-          GITHUB_ACTOR: ${{ secrets.NAME }}
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          NAME: ${{ secrets.NAME }}
+          TOKEN: ${{ secrets.TOKEN }}
