GitHub Actions redo 9

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,11 +19,8 @@ jobs:
           distribution: 'temurin'
           java-version: '22'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       - name: Publish to GitHub Packages
-        run: ./gradlew publish
+        run: ./gradlew.bat publish
         env:
           GITHUB_ACTOR: ${{ secrets.NAME }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
