GitHub Actions redo 9.5

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
           distribution: 'temurin'
           java-version: '22'
 
+      - name: Grant execute permission for gradlew.bat
+        run: chmod +x gradlew.bat
+
       - name: Publish to GitHub Packages
         run: ./gradlew.bat publish
         env:
