--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Run tests and generate coverage report
+        run: ./gradlew test jacocoTestReport
+
+      - name: Upload coverage report to GitHub as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: build/reports/jacoco/test/html
+
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
