--- a/ast/build.gradle
+++ b/ast/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'jacoco'
 }
 
 group 'org.example'
@@ -15,8 +16,16 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+jacocoTestReport {
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // Para que siempre se genere el reporte tras ejecutar los tests
 }
 
 publishing {
@@ -36,7 +45,7 @@ publishing {
 
             groupId = 'printscript'
             artifactId = 'ast'
-            version = '1.3.7'
+            version = '1.3.8'
         }
     }
 }
