--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to GitHub Packages
+name: Build and Publish
 
 on:
   push:
@@ -6,8 +6,10 @@ on:
       - main
 
 jobs:
-  publish:
+  test:
     runs-on: ubuntu-latest
+    env:
+      NAME: 'Ignacio'  # Define tu variable de entorno aquí
 
     steps:
       - name: Checkout repository
@@ -30,6 +32,23 @@ jobs:
         with:
           name: coverage-report
           path: build/reports/jacoco/test/html
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: test  # Este job se ejecuta después del job 'test'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Publish to GitHub Packages
         run: ./gradlew publish
