--- a/lexer/build.gradle
+++ b/lexer/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'jacoco'
+    id 'checkstyle'
 }
 
 group 'org.example'
@@ -46,7 +47,20 @@ publishing {
 
             groupId = 'printscript'
             artifactId = 'lexer'
-            version = '1.3.9'
+            version = '1.3.10'
         }
+    }
+}
+
+// Configuración de Checkstyle
+checkstyle {
+    toolVersion = '10.1.0'  // Usa la versión que prefieras
+    configFile = file('config/checkstyle/checkstyle.xml')  // Ruta a tu archivo de configuración
+}
+
+checkstyleMain {
+    reports {
+        xml.required = true
+        html.required = true
     }
 }
