--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     env:
       NAME: 'Ignacio'  # Define tu variable de entorno aquí
@@ -27,15 +27,24 @@ jobs:
       - name: Run tests and generate coverage report
         run: ./gradlew test jacocoTestReport
 
+      - name: Run SpotBugs
+        run: ./gradlew spotbugsMain
+
       - name: Upload coverage report to GitHub as artifact
         uses: actions/upload-artifact@v3
         with:
           name: coverage-report
           path: build/reports/jacoco/test/html
 
+      - name: Upload SpotBugs report to GitHub as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: spotbugs-report
+          path: build/reports/spotbugs/main.html  # Ruta al reporte HTML de SpotBugs
+
   publish:
     runs-on: ubuntu-latest
-    needs: test  # Este job se ejecuta después del job 'test'
+    needs: build  # Este job se ejecuta después del job 'build'
 
     steps:
       - name: Checkout repository
