--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -1,5 +1,3 @@
-import com.github.spotbugs.snom.SpotBugsReport
-
 plugins {
     id 'java'
     id 'maven-publish'
@@ -41,7 +39,7 @@ spotbugsMain {
         }
         html {
             enabled = true
-            destination = file("build/reports/spotbugs/main.html") as SpotBugsReport
+            destination = file("$buildDir/reports/spotbugs/main.html")
         }
     }
 }
