--- a/interpreter/build.gradle
+++ b/interpreter/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     testImplementation project(":token")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    spotbugs("com.github.spotbugs.snom:spotbugs-gradle-plugin:6.0.22")
 }
 
 jacocoTestReport {
@@ -40,7 +41,7 @@ spotbugsMain {
         }
         html {
             enabled = true
-            destination = file("$buildDir/reports/spotbugs/main.html")
+            destination = file("build/reports/spotbugs/main.html")
         }
     }
 }
