--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation project(":lexer")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    spotbugs("com.github.spotbugs.snom:spotbugs-gradle-plugin:6.0.22")
 }
 
 jacocoTestReport {
@@ -39,7 +40,7 @@ spotbugsMain {
         }
         html {
             enabled = true
-            destination = file("$buildDir/reports/spotbugs/main.html")
+            destination = file("dir/reports/spotbugs/main.html")
         }
     }
 }
