--- a/token/build.gradle
+++ b/token/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    spotbugs("com.github.spotbugs.snom:spotbugs-gradle-plugin:6.0.22")
 }
 
 
@@ -37,7 +38,7 @@ spotbugsMain {
         }
         html {
             enabled = true
-            destination = file("$buildDir/reports/spotbugs/main.html")
+            destination = file("build/reports/spotbugs/main.html")
         }
     }
 }
