--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Run Checkstyle
+        run: ./gradlew checkstyleMain
+
       - name: Run tests and generate coverage report
         run: ./gradlew test jacocoTestReport
 
