--- a/lexer/build.gradle
+++ b/lexer/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'jacoco'
+    id 'checkstyle'  // Agregar Checkstyle
 }
 
 group 'org.example'
@@ -15,6 +16,14 @@ dependencies {
     implementation project(":token")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+checkstyle {
+    toolVersion '7.8.1'
+    configFile file("config/checkstyle/checkstyle.xml")
+}
+checkstyleMain {
+    source ='src/main/java'
 }
 
 jacocoTestReport {
