--- a/token/build.gradle
+++ b/token/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'jacoco'
+    id 'checkstyle'  // Agregar Checkstyle
 }
 
 group 'org.example'
@@ -16,6 +17,13 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+checkstyle {
+    toolVersion '10.12.0'
+    configFile file("config/checkstyle/checkstyle.xml")
+}
+checkstyleMain {
+    source = 'src/main/java'
+}
 
 jacocoTestReport {
     reports {
