--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NAME: 'Ignacio'  # Define tu variable de entorno aquí
+      NUMBER_TO_SUM: 25  # Define tu variable de entorno aquí
 
     steps:
       - name: Checkout repository
@@ -25,7 +26,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run Checkstyle
-        run: ./gradlew checkstyleMain
+        run: ./gradlew check
 
       - name: Run tests and generate coverage report
         run: ./gradlew test jacocoTestReport
