--- a/buildSrc/src/main/groovy/common.gradle
+++ b/buildSrc/src/main/groovy/common.gradle
@@ -3,7 +3,7 @@ ext {
     checkstyleVersion = '7.8.1'
     junitVersion = '5.8.1'
     groupId = 'printscript'
-    version = '2.1.6'
+    publishVersion = '2.1.6'
 
     configurePlugins = { project ->
         project.plugins.apply 'java'
@@ -46,7 +46,7 @@ ext {
 
                     groupId = groupId
                     artifactId = artifactId
-                    version = version
+                    version = publishVersion
                 }
             }
         }
