--- a/ast/build.gradle
+++ b/ast/build.gradle
@@ -7,6 +7,7 @@ configureTesting(this)
 configurePublishing(this, "ast")
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
