--- a/interpreter/build.gradle
+++ b/interpreter/build.gradle
@@ -8,9 +8,7 @@ configurePublishing(this, "interpreter")
 
 dependencies {
     implementation project(":ast")
-    testImplementation project(":lexer")
-    testImplementation project(":parser")
-    testImplementation project(":token")
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
